section spacing adjustments, form input hover fix

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -410,10 +410,22 @@
         scroll-margin-top: -248px;
     }
 
+    .marquee {
+        margin-bottom: 324px;
+        
+        @include mq-max('xxl') {
+            margin-bottom: 248px;
+        }
+        
+        @include mq-max('md') {
+            margin-bottom: 164px;
+        }
+    }
+
     .section-headline {
 
         @include mq-max('xxl') {
-            margin-bottom: 128px;
+            margin-bottom: 64px;
         }
     }
     
@@ -541,6 +553,10 @@
                     font-size: 32px;
                 }
 
+                @include mq-max('sm') {
+                    font-size: 28px;
+                }
+
                 .pause-or-cancel {
                     font-size: 14px;
                     letter-spacing: 0.25px;
@@ -560,6 +576,10 @@
                 
                 @include mq-max('xxl') {
                     margin: 42px 0;
+                }
+
+                @include mq-max('sm') {
+                    margin: 36px 0;
                 }
 
                 &-coral {
